package com.example.atry.data.constants

object AppConstants {
    val religions = listOf(
        "Không tôn giáo",
        "Phật giáo",
        "Thiên chúa giáo",
        "Tin lành",
        "Cao Đài",
        "Hồi giáo",
        "Ấn Độ giáo",
        "Tôn giáo khác"
    )
    val vietnamProvinces = listOf(
        "Hà Nội", "Hồ Chí Minh", "Đà Nẵng", "Hải Phòng", "Cần Thơ",
        "An Giang", "Bà Rịa - Vũng Tàu", "Bắc Giang", "Bắc Kạn", "Bạc Liêu",
        "Bắc Ninh", "Bến Tre", "Bình Định", "Bình Dương", "Bình Phước",
        "Bình Thuận", "Cà Mau", "Cao Bằng", "Đắk Lắk", "Đắk Nông",
        "Điện Biên", "Đồng Nai", "Đồng Tháp", "Gia Lai", "Hà Giang",
        "Hà Nam", "Hà Tĩnh", "Hải Dương", "Hậu Giang", "Hòa Bình",
        "Hưng Yên", "Khánh Hòa", "Kiên Giang", "Kon Tum", "Lai Châu",
        "Lâm Đồng", "Lạng Sơn", "Lào Cai", "Long An", "Nam Định",
        "Nghệ An", "Ninh Bình", "Ninh Thuận", "Phú Thọ", "Phú Yên",
        "Quảng Bình", "Quảng Nam", "Quảng Ngãi", "Quảng Ninh", "Quảng Trị",
        "Sóc Trăng", "Sơn La", "Tây Ninh", "Thái Bình", "Thái Nguyên",
        "Thanh Hóa", "Thừa Thiên – Huế", "Tiền Giang", "Trà Vinh", "Tuyên Quang",
        "Vĩnh Long", "Vĩnh Phúc", "Yên Bái", "Khác"
    )
    val gender =  listOf(
        "Nam",
        "Nữ",
        "Khác"
    )

    //hobbies
    val healthy = listOf(
        "Chạy bộ", "Gym / Fitness", "Yoga / Thiền", "Đạp xe",
        "Bơi lội", "Leo núi / Trekking", "Ăn uống healthy",
        "Chăm thú cưng", "Làm vườn"
    )

    val intellectual = listOf(
        "Đọc sách", "Viết lách", "Học ngoại ngữ", "Nghiên cứu khoa học",
        "Chơi cờ / giải đố", "Nghe Podcast", "Lịch sử / Văn hóa",
        "Công nghệ / Lập trình"
    )
    val joy = listOf(
        "Nghe nhạc", "Xem phim / Netflix", "Du lịch", "Chụp ảnh",
        "Vẽ / Thiết kế", "Chơi game", "Cà phê tám chuyện",
        "Sưu tầm", "Nấu ăn", "Nhảy nhót / Karaoke"
    )
    val unique = listOf(
        "Cosplay", "Mê xe", "Đồ điện tử", "Sống ảo",
        "Tarot / Tử vi", "Content Creator"
    )

}