...
                label = "Mật khẩu",

                isPassword = true
            )
            Spacer(modifier = Modifier.size(20.dp))
            CustomLinearButton(
                "Tiếp theo",
                {
                    viewModel.registerWithEmailPassword(viewModel.email,password)
                    alertViewModel.showAlert()
                },
                redOrangeLinear, Color.White
            )
...
